--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fos1",
+  "name": "vanilla-ts-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Vanilla Typescript Starter Project",
   "main": "index.js",
   "scripts": {
     "build": "npx webpack",
