--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx webpack",
     "dev": "npx webpack-dev-server",
     "storybook": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
+    "test-playwright": "npx playwright test",
     "build-storybook": "build-storybook",
     "test-storybook": "npx test-storybook",
     "test-storybook:ci": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npx build-storybook --quiet && npx http-server storybook-static --port 6006 --silent\" \"npx wait-on -d 60 -i 1000 tcp:127.0.0.1:6006 && npx test-storybook\""
@@ -27,6 +28,7 @@
     "@storybook/manager-webpack4": "^6.5.16",
     "@storybook/test-runner": "^0.9.4",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
     "babel-jest": "^29.5.0",
@@ -36,6 +38,7 @@
     "css-loader": "^6.7.3",
     "http-server": "^14.1.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "playwright": "^1.31.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
