--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx webpack",
     "dev": "npx webpack-dev-server",
+    "test": "npx jest",
     "storybook": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
     "test-playwright": "npx playwright test",
     "build-storybook": "build-storybook",
@@ -36,6 +37,7 @@
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
