--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
     "@playwright/test": "^1.31.2",
     "@storybook/addon-a11y": "^6.5.16",
@@ -49,6 +53,7 @@
     "storybook-css-modules": "^1.0.8",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "wait-on": "^7.0.1",
     "webpack": "^5.76.0",
