--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "playwright": "^1.31.2",
+    "postcss-loader": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "script-loader": "^0.7.2",
